# openapi.yaml
@@ -518,6 +518,12 @@ components:
             totalPlaytimeMs:
               type: integer
               format: int64
+            kills:
+              type: integer
+            deaths:
+              type: integer
+            mobKills:
+              type: integer
 
     WorldInfo:
       type: object
